--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <img src="./images/pic_sk.jpg" alt="siddhant kushwaha" />
             </div>
             <div class="content-box">
-              <h3>Siddhant Kushwaha<br /><span>Web Developer</span></h3>
+              <h3>Siddhant Kushwaha<br /><span>MERN Developer</span></h3>
             </div>
           </div>
           <ul class="sci">
@@ -65,7 +65,7 @@
               <img src="./images/pic_sg.jpeg" alt="shivam gupta" />
             </div>
             <div class="content-box">
-              <h3>Shivam Gupta<br /><span>Frontend Developer</span></h3>
+              <h3>Shivam Gupta<br /><span>MERN Developer</span></h3>
             </div>
           </div>
           <ul class="sci">
@@ -91,7 +91,7 @@
               <img src="./images/pic_ps.jpg" alt="piyush saxena" />
             </div>
             <div class="content-box">
-              <h3>Piyush Saxena<br /><span>Full Stack Developer</span></h3>
+              <h3>Piyush Saxena<br /><span>MERN Developer</span></h3>
             </div>
           </div>
           <ul class="sci">
